--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,17 @@ services:
       - 8000:3000
     volumes:
       - .:/app
+    depends_on:
+      - db
+
+  db:
+    image: mysql:5.7
+    restart: always
+    environment:
+      MYSQL_DATABASE: ambassador
+      MYSQL_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - .dbdata:/var/lib/mysql
+    ports:
+      - 3306:3306
