--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,9 @@ services:
       - .dbdata:/var/lib/mysql
     ports:
       - 3306:3306
+
+  redis:
+    image: redis:latest
+    restart: always
+    ports:
+      - 6379:6379
