--- a/clients/admin/package.json
+++ b/clients/admin/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,8 +12,10 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.2.2",
+    "c3": "^0.7.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.4",
@@ -44,6 +47,8 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/c3": "^0.7.8",
+    "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.1.5"
   }
 }
