set node major version

--- a/clients/checkout/package.json
+++ b/clients/checkout/package.json
@@ -2,6 +2,9 @@
   "name": "checkout",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "dev": "next dev -p 5000",
     "build": "next build",
